Cart.js - Fixed buggy behaviour when removing items from cart, added conditionals to prevent checking out with empty cart, improved styling; Checkout.js - Fixed checkout behaviour so user's cart is emptied upon checkout completion; Product.js - Implemented modal window notifying the user that a product has variants when adding to cart from the product index page, and adds the default variant to the cart if user proceeds; ProductDetail.js - user's selected product variant is now tracked and passed to the Cart, experimenting with reduced prices for certain variants (currently restricted to Mix-By-Proxy); ProductList.js - implemented user-input Search by Name feature (mostly complete, minor bugs); OrderDetailCard.js, MixtapeCreateForm.js - Began implementation of MixtapeCreateForm.js component into OrderDetailCard.js for users to specify their desired customisation for the Mix-By-Proxy product once purchased; OrderDetails.js - Implemented stopgap measures so that both old- and new-format versions of the user's order can be displayed until all outdated orders have been updated; OrderHistory.js - removed redundant function from useEffect hook; various other styling and layout changes.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 body {
-    font-family: 'Bungee Hairline', cursive;
+    font-family: 'Bungee Hairline', 'Courier New',
+    monospace;
     font-weight: bolder;
     font-size: 1.3rem;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Bungee', cursive;
+    font-family: 'Bungee', 'Courier New',
+    monospace;
     
 }
 
