--- a/src/product/ProductDetail.css
+++ b/src/product/ProductDetail.css
@@ -6,6 +6,11 @@ img:hover {
     cursor: pointer;
 }
 
+.btn-secondary:focus, .btn-secondary:active {
+    background-color: #FF2273;
+    border-color:#FF2273;
+}
+
 .detailModalFlex {
     display: flex;
     flex-direction: row;
